 aurora-device-vc707.bsh   Locally Added               0 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/aurora
 aurora-device-null/       Locally Added               0 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/aurora/aurora-device-null
 aurora-device-null.awb    Locally Added               0 
 aurora-device-null.bsv    Locally Added               0 


1) Aurora support for VC707 (and Virtex-7 in general), using a 64b/66b
   transceiver clocked at 5gbps.  Transceiver currently experiences
   soft errors at channel-up time.  These errors are patched by (2).

2) Improved handshaking at flowcontrol startup time.  We now use
   single messages for heartbeat and flowcontrol, which should improve
   throughput and latency. Heartbeat now includes sequence ids.
   Transceiver is not initialized until several sequential heartbeats
   have been received by both sides.

3) Made aurora a default in PCI-e generic builds.  Non-multifpga
   builds include a null interface.


----------
mcadler     Date: Thu Apr 11 12:05:47 EDT 2013  CSN: CSN-leap-platforms-686
                  Thu Apr 11 16:05:47 UTC 2013


Directory tools/platforms/leap-fpga-ctrl
 leap-fpga-ctrl.c          Locally Modified          685 

We are seeing corruption during programming if two devices are programmed at the
same time.  Change leap-fpga-ctrl to permit only one device to be in the
programming state at a time.  No script changes are required, since other
requests block until the lock is released.

The --force option ignores the lock.

----------
keflemin    Date: Wed Apr 17 16:13:45 EDT 2013  CSN: CSN-leap-platforms-687
                  Wed Apr 17 20:13:45 UTC 2013


Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/aurora/aurora-device-vc707
 aurora-device-vc707.bsv   Locally Modified          686 


Added 10 Gbps transceiver for V7.  This core measures in at 700MB/s
and 1us of latency.