@@ -16224,3 +16224,14 @@ Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/aur
 
 Added 10 Gbps transceiver for V7.  This core measures in at 700MB/s
 and 1us of latency.
+
+----------
+keflemin    Date: Mon Apr 22 23:31:28 EDT 2013  CSN: CSN-leap-platforms-688
+                  Tue Apr 23 03:31:28 UTC 2013
+
+
+Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/ddr-sdram/ddr-sdram-xilinx/ddr3-sdram-vc707
+ mig_7series_v1_7_ddr_byte_lane.v Locally Modified          687 
+
+
+Fixed textual error that was causing XST 14.5 to fail.
